# Tiny-Neural-Inference-Engine

./: CMakeLists.txt  QUICKSTART.md  README.md  build.sh
benchmarks/: CMakeLists.txt  benchmark_main.cpp
include/tnie/: graph.h  operator.h  tensor.h  tnie.h
src/: CMakeLists.txt  gemm.cpp  graph.cpp  main.cpp  operator.cpp  tensor.cpp  tnie.cpp
tests/: CMakeLists.txt  test_graph.cpp  test_operator.cpp  test_tensor.cpp
utils/: batch_infer.py  convert_jpg_to_ubyte.py  create_test_image.py  infer.py
